--- a/About/aboutus.html
+++ b/About/aboutus.html
@@ -4,5 +4,8 @@
       <title>About Us</title>
     </head>
     <body>
-      <h2>Creaters:</h2>
-        
+      <b>
+        <center>
+          <h1>About Us</h1>
+        </center>
+      </b>
