--- a/About/aboutus.html
+++ b/About/aboutus.html
@@ -17,8 +17,7 @@
           <img src="smileyface.jpg" alt="Put the picture of you here" width="300" height="300">
           <img src="smileyface.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
           <br>
-          <h2 style="text-align:left;"> Danielle _______</h2>
-          <h2 style="text-align:right;"> Djesnie _______ </h2>
+          <h2 style="text-align:left;"> Danielle _______ < style="text-align:right;"> Djesnie _______ </h2>
           <br>
       </div>
       
@@ -26,8 +25,7 @@
           <img src="smileyface.jpg" alt="Put the picture of you here" width="300" height="300">
           <img src="smileyface.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
           <br>
-          <h2 style="text-align:left;"> Tianna _______</h2>
-          <h2 style="text-align:right;"> Amanda _______ </h2>
+          <h2 style="text-align:left;"> Tianna _______ < style="text-align:right;"> Amanda _______ </h2>
           <br>
       </div>
       
