--- a/About/aboutus.html
+++ b/About/aboutus.html
@@ -17,7 +17,7 @@
           <img src="smileyface.jpg" alt="Put the picture of you here" width="300" height="300">
           <img src="smileyface.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
           <br>
-          <h2 style="text-align:left;"> Danielle _______ < style="text-align:right;"> Djesnie _______ </h2>
+          <h2 style="text-align:left;"> Danielle _______ <h2 style="text-align:right;"> Djesnie _______ </h2></h2>
           <br>
       </div>
       
