--- a/About/aboutus.html
+++ b/About/aboutus.html
@@ -17,15 +17,19 @@
           <img src="smileyface.jpg" alt="Put the picture of you here" width="300" height="300">
           <img src="smileyface.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
           <br>
-          <h2 style="text-align:left;"> Danielle _______                    Djesnie _______</h2>
+        <div>
+          <h2 style="float: left"> Danielle _______ </h2>
+          <h2 style="float: right"> Djesnie _______</h2>
           <br>
+        </div>
+        <hr />
       </div>
       
       <div>
           <img src="smileyface.jpg" alt="Put the picture of you here" width="300" height="300">
           <img src="smileyface.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
           <br>
-          <h2 style="text-align:left;"> Tianna _______ < style="text-align:right;"> Amanda _______ </h2>
+          <h2 style="text-align:left;"> Tianna _______  Amanda _______ </h2>
           <br>
       </div>
       
