--- a/About/aboutus.html
+++ b/About/aboutus.html
@@ -17,8 +17,8 @@
         <h2 style="float: left"> Danielle _______ </h2>
         <h2 style="float: right"> Djesnie _______</h2>
         <br>
-        <img src="smileyface.jpg" alt="Put the picture of you here" width="300" height="300">
-        <img src="smileyface.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
+        <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
+        <img src="images.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
         <br>
         <br>
         <br>
@@ -28,8 +28,8 @@
         <h2 style="float: left"> Tianna _______ </h2>
         <h2 style="float: right">  Amanda _______</h2>
         <br>
-        <img src="smileyface.jpg" alt="Put the picture of you here" width="300" height="300">
-        <img src="smileyface.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
+        <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
+        <img src="images.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
         <br>
         <br>
         <br>
@@ -38,7 +38,7 @@
       <center>
         <h2 style="text-align:center;"> Sisi _______ </h2>
         <br>
-        <img src="smileyface.jpg" alt="Put the picture of you here" width="300" height="300">
+        <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
       </center>
       
       <br>
