--- a/About/aboutus.html
+++ b/About/aboutus.html
@@ -17,10 +17,8 @@
         <h2 style="float: left"> Danielle _______ </h2>
         <h2 style="float: right"> Djesnie _______</h2>
         <br>
-        <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
+        <img src="images.jpg" alt="Put the picture of you here" align="left" width="300" height="300">
         <img src="images.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
-        <br>
-        <br>
         <br>
       </div>
       
@@ -28,10 +26,8 @@
         <h2 style="float: left"> Tianna _______ </h2>
         <h2 style="float: right">  Amanda _______</h2>
         <br>
-        <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
+        <img src="images.jpg" alt="Put the picture of you here" align="left" width="300" height="300">
         <img src="images.jpg" alt="Put the picture of you here" align="right" width="300" height="300" display="inline" position="absolute">
-        <br>
-        <br>
         <br>
       </div>
       
