--- a/About/workspace.html
+++ b/About/workspace.html
@@ -15,12 +15,12 @@
      <br>
      <h2 style="text-align: left"> Danielle _______ </h2>
      <br>
-     <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
+     <img src="images.jpg" alt="Put the picture of you here"  width="300" height="300">
      <br>
      <br>
-     <h2 style="text-align: left"> Tianna _______ </h2>
+     <h2 style="text-align: center"> Tianna _______ </h2>
      <br>
-     <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
+     <img src="images.jpg" alt="Put the picture of you here" align="center" width="300" height="300">
      <br>
      <br>
      <h2 style="text-align: left;"> Sisi _______ </h2>
@@ -28,9 +28,9 @@
      <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
      <br>
      <br>
-     <h2 style="text-align: left"> Djesnie _______</h2>
+     <h2 style="text-align: center"> Djesnie _______</h2>
      <br>
-     <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
+     <img src="images.jpg" alt="Put the picture of you here" align="center" width="300" height="300">
      <br>
      <br>
      <h2 style="text-align: left">  Amanda _______</h2>
