--- a/About/workspace.html
+++ b/About/workspace.html
@@ -20,7 +20,7 @@
      <br>
      <h2 style="text-align: center"> Tianna _______ </h2>
      <br>
-     <img src="images.jpg" alt="Put the picture of you here" align="center" width="300" height="300">
+     <img src="images.jpg" alt="Put the picture of you here" align="middle" width="300" height="300">
      <br>
      <br>
      <h2 style="text-align: left;"> Sisi _______ </h2>
@@ -30,7 +30,7 @@
      <br>
      <h2 style="text-align: center"> Djesnie _______</h2>
      <br>
-     <img src="images.jpg" alt="Put the picture of you here" align="center" width="300" height="300">
+     <img src="images.jpg" alt="Put the picture of you here" align="middle" width="300" height="300">
      <br>
      <br>
      <h2 style="text-align: left">  Amanda _______</h2>
