--- a/About/workspace.html
+++ b/About/workspace.html
@@ -18,9 +18,11 @@
      <img src="images.jpg" alt="Put the picture of you here"  width="300" height="300">
      <br>
      <br>
-     <h2 style="text-align: center"> Tianna _______ </h2>
-     <br>
-     <img src="images.jpg" alt="Put the picture of you here" align="middle" width="300" height="300">
+     <center>
+       <h2 style="text-align: center"> Tianna _______ </h2>
+       <br>
+       <img src="images.jpg" alt="Put the picture of you here" align="middle" width="300" height="300">
+     </center>
      <br>
      <br>
      <h2 style="text-align: left;"> Sisi _______ </h2>
@@ -28,9 +30,11 @@
      <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
      <br>
      <br>
-     <h2 style="text-align: center"> Djesnie _______</h2>
-     <br>
-     <img src="images.jpg" alt="Put the picture of you here" align="middle" width="300" height="300">
+     <center>
+       <h2 style="text-align: center"> Djesnie _______</h2>
+       <br>
+       <img src="images.jpg" alt="Put the picture of you here" align="middle" width="300" height="300">
+     </center>
      <br>
      <br>
      <h2 style="text-align: left">  Amanda _______</h2>
