--- a/About/workspace.html
+++ b/About/workspace.html
@@ -37,7 +37,7 @@
      </center>
      <br>
      <br>
-     <h2 style="text-align: left">  Amanda _______</h2>
+      <h2 style="text-align: left">  Amanda _______</h2><h4> Bio: </h4>
      <br>
      <img src="images.jpg" alt="Put the picture of you here" width="300" height="300">
      
