--- a/About/workspace.html
+++ b/About/workspace.html
@@ -18,7 +18,7 @@
      <br>
      <img src="images.jpg" alt="Put the picture of you here" align="left" width="300" height="300">
      <h4> Bio: </h4>     
-     <p align="right"> here write your bio </p>     
+     <p> here write your bio </p>     
      <h4> Experience </h4>     
      <p> here write your experience </p>    
      <p> add link to home page </p>
