--- a/About/workspace.html
+++ b/About/workspace.html
@@ -2,6 +2,11 @@
   <html>
     <head>
       <title>About Us 2</title>
+      <style>
+        div {
+          margin: 35px;
+        }
+      </style>       
     </head>
     <body>
       <b>
