--- a/About/workspace.html
+++ b/About/workspace.html
@@ -4,7 +4,7 @@
       <title>About Us 2</title>
       <style>
         div {
-          margin: 35px;
+          margin: 35px 35px 35px 35px;
         }
       </style>       
     </head>
