--- a/About/workspace.html
+++ b/About/workspace.html
@@ -9,6 +9,7 @@
       </style>       
     </head>
     <body>
+      <div>
       <b>
         <center>
           <font size="32"><h1> About Us</h1></font>
@@ -75,3 +76,5 @@
      <h4> Experience </h4>
      <p> here write your experience </p>
      <p> add link to home page </p>
+     
+       </div>
