--- a/About/workspace.html
+++ b/About/workspace.html
@@ -6,6 +6,9 @@
         div {
           margin: 45px 60px 45px 60px;
         }
+        body {
+            background-image: url("light-blue-triangles-background-small.jpg");
+        }
       </style>       
     </head>
     <body>
