--- a/About/workspace.html
+++ b/About/workspace.html
@@ -4,10 +4,14 @@
       <title>About Us 2</title>
       <style>
         div {
-          margin: 45px 60px 45px 60px;
+            margin: 45px 60px 45px 60px;
         }
         body {
             background-image: url("light-blue-triangles-background-small.jpg");
+        }
+        img {
+            opacity: .7;
+            filter: alpha(opacity=70);
         }
       </style>       
     </head>
