--- a/About/workspace.html
+++ b/About/workspace.html
@@ -10,7 +10,7 @@
             background-image: url("light-blue-triangles-background-small.jpg");
         }
         img {
-            opacity: .5;
+            filter: alpha(opacity=50);
         }
       </style>       
     </head>
