--- a/About/workspace.html
+++ b/About/workspace.html
@@ -9,8 +9,8 @@
         body {
             background-image: url("light-blue-triangles-background-small.jpg");
         }
-        img {
-            filter: alpha(opacity=50);
+        div {
+            opacity: 0.5;
         }
       </style>       
     </head>
