--- a/About/workspace.html
+++ b/About/workspace.html
@@ -7,7 +7,20 @@
             margin: 45px 80px 45px 60px;
         }
         body {
-            background-image: url("light-blue-triangles-background-small.jpg");
+            background-image: url("images0KOSZXB3.jpg");
+            color: white;
+        }
+        h1 {
+            color: white;
+        }
+        h2 {
+            color: white;
+        }
+        h4 {
+            color: white;
+        }
+        p {
+            color: white;
         }
       </style>       
     </head>
