--- a/About/workspace.html
+++ b/About/workspace.html
@@ -5,22 +5,25 @@
       <style>
         div {
             margin: 60px 80px 50px 60px;
+            opacity: 0.6;
         }
         body {
-            background-image: url("images0KOSZXB3.jpg");
-            color: white;
+            background-color: #40daf9;
+            color: black;
+        }
+        
         }
         h1 {
-            color: white;
+            color: black;
         }
         h2 {
-            color: white;
+            color: black;
         }
         h4 {
-            color: white;
+            color: black;
         }
         p {
-            color: white;
+            color: black;
         }
       </style>       
     </head>
