--- a/About/workspace.html
+++ b/About/workspace.html
@@ -42,11 +42,11 @@
      <h2 style="text-align:right"> Danielle _______ </h2>
      <br>
      <img src="images.jpg" alt="Put the picture of you here" align="right" width="300" height="300">
-     <h4 text-align:"left"> Bio: </h4>     
-     <p text-align:"left"> here write your bio </p>     
-     <h4 text-align:"left"> Experience </h4>     
-     <p text-align:"left"> here write your experience </p>    
-     <p text-align:"left"> add link to home page </p>
+     <pre><h4 text-align:"center"> Bio: </h4>     
+     <pre> <p text-align:"center"> here write your bio </p>     
+     <pre><h4 text-align:"center"> Experience </h4>     
+     <pre> <p text-align:"center"> here write your experience </p>    
+     <pre> <p text-align:"center"> add link to home page </p>
      
      <br>
      <br>
