--- a/About/workspace.html
+++ b/About/workspace.html
@@ -5,7 +5,7 @@
       <style>
         div {
             margin: 60px 80px 50px 60px;
-            backgroud: rgb(64, 218, 249, 0.6);
+            background: rgb(64, 218, 249, 0.2);
         }
         body {
             background-color: #40daf9;
