--- a/About/workspace.html
+++ b/About/workspace.html
@@ -5,6 +5,7 @@
       <style>
         div {
             margin: 60px 80px 50px 60px;
+            background-color: #40daf9;
             background: rgb(64, 218, 249, 0.2);
         }
         body {
