--- a/About/workspace.html
+++ b/About/workspace.html
@@ -4,11 +4,11 @@
       <title>About Us 2</title>
       <style>
         div {
-            margin: 60px 80px 50px 60px;
-            background-color: #40daf9;
-            background: rgb(64, 218, 249, 0.5);
+            margin: 60px 80px 50px 60px
+            background-color: rgb(64, 218, 249, 0.5);
         }
         body {
+            background-color: #40daf9;
             color: black;
         }
         
