--- a/About/workspace.html
+++ b/About/workspace.html
@@ -53,7 +53,7 @@
       
      <h2 style="text-align: left"> Tianna _______ </h2>     
      <br>     
-     <img src="images.jpg" alt="Put the picture of you here" align="left" width="300" height="300">     
+     <img src="IMG_0537.JPG" align="left" width="300" height="300">     
      <h4> Bio: </h4>          
      <p> here write your bio </p>          
      <h4> Experience </h4>          
