--- a/About/homepage.html
+++ b/About/homepage.html
@@ -8,6 +8,9 @@
     <head>
     
     <body>
+      body,
+      input,
+      select,
       button {
           font-family: Arial,Helvetica,sans-serif;
           font-size: 14px;
