--- a/About/homepage.html
+++ b/About/homepage.html
@@ -8,13 +8,12 @@
     <head>
     
     <body>
-      body,
-      input,
-      select,
+      <div>
       button {
           font-family: Arial,Helvetica,sans-serif;
           font-size: 14px;
-      }  
+      }
+      </div>
       <button style="height:200px;width:200px" tex>Find out more about your style!</button>
 
       
