--- a/About/homepage.html
+++ b/About/homepage.html
@@ -19,7 +19,7 @@
             width: 90px;
             height: 40px;
         }  
-        <div class="button big-btn"><font size="21>"Find out more about your style!</font></div>
+        <div class="button big-btn" font size="21>"Find out more about your style!</div>
       
       </style>
         
