--- a/About/homepage.html
+++ b/About/homepage.html
@@ -16,7 +16,7 @@
             width: 90px;
             height: 40px;
         }  
-        <div class="button big-btn" font size="21>"Find out more about your style!</div>
+        <div class="button big-btn">"Find out more about your style!</div>
       </style>
         
 
