--- a/About/homepage.html
+++ b/About/homepage.html
@@ -16,9 +16,9 @@
             width: 90px;
             height: 40px;
         }  
-        <div class="button big-btn">"Find out more about your style!</div>
-      </style>
         
+      </style>
+      <div class="button big-btn" font size="21" >"Find out more about your style!</div>  
 
             
     </head>
