--- a/About/homepage.html
+++ b/About/homepage.html
@@ -4,8 +4,8 @@
       <title>Fashion Finder</title>
       <style>
         .button {
-            background-color: #ffffff;
-            color: #2d2828;
+            background-color: #2d2828;
+            color: #ffffff;
             padding: 0px 0px 0px 50px;
             border-radius: 10px;
             -moz-border-radius: 10px;
@@ -18,7 +18,7 @@
         }  
         
       </style>
-      <div class="button big-btn" font size="50" >"Find out more about your style!</div>  
+      <div class="button big-btn">"Find out more about your style!</div>  
 
             
     </head>
