--- a/About/homepage.html
+++ b/About/homepage.html
@@ -18,7 +18,7 @@
         }  
         
       </style>
-      <div class="button big-btn">"Find out more about your style!</div>  
+      <div class="button big-btn">Find out more about your style!</div>  
 
             
     </head>
