--- a/About/homepage.html
+++ b/About/homepage.html
@@ -4,8 +4,10 @@
       <title>Fashion Finder</title>
       <style>
         .button {
-            background-color: #2d2828;
-            color: #ffffff;
+            background-color: #ffffff;
+            color: #2d2828;
+            border-style: solid;
+            border-color: #2d2828;
             padding: 0px 0px 0px 50px;
             border-radius: 10px;
             -moz-border-radius: 10px;
