--- a/About/homepage.html
+++ b/About/homepage.html
@@ -12,7 +12,8 @@
             border-radius: 10px;
             -moz-border-radius: 10px;
             -webkit-border-radius: 10px;
-            margin: 60px 45px 60px 45px;
+            margin: 60px 45px 60px 45px            
+            border-width: 5px;
         }  
         .big-btn {
             width: 450px;
