--- a/About/homepage.html
+++ b/About/homepage.html
@@ -9,7 +9,7 @@
             border-style: solid;
             border-color: #2d2828;
             border-width: 5px;
-            padding: 0px 0px 0px 50px;
+            padding: 50px 50px 0px 50px;
             border-radius: 10px;
             -moz-border-radius: 10px;
             -webkit-border-radius: 10px;
@@ -21,7 +21,7 @@
         }  
         
       </style>
-      <div class="button big-btn">Find out more about your style!</div>  
+      <div class="button big-btn"><font size="21">Find out more about your style!</font></div>  
 
             
     </head>
