--- a/About/homepage.html
+++ b/About/homepage.html
@@ -9,19 +9,28 @@
             border-style: solid;
             border-color: #2d2828;
             border-width: 5px;
-            padding: 150px 50px 0px 70px;
+            padding: 50px 50px 0px 50px;
             border-radius: 10px;
             -moz-border-radius: 10px;
             -webkit-border-radius: 10px;
             margin: 60px 45px 60px 45px
         }  
-        .big-btn {
+        .quiz {
             width: 450px;
             height: 150px;
         }  
-        
+        .tips {
+            width: 450px;
+            height: 150px;
+        }
+        .about-us {
+            width: 450px;
+            height: 150px;
+        }
       </style>
-      <div class="button big-btn"><font size="21">Find out more about your style!</font></div>  
+      <div class="button quiz"><font size="21">Find out more about your style!</font></div>
+      <div class="button tips"><font size="21">Tips and helpful hints!</font></div>
+      <div class="button about-us"><font size="21"> <align="right">Meet the creators!</font></div>
 
             
     </head>
