--- a/About/homepage.html
+++ b/About/homepage.html
@@ -22,6 +22,7 @@
         .tips {
             width: 450px;
             height: 150px;
+            float-right
         }
         .about-us {
             width: 450px;
@@ -30,7 +31,7 @@
       </style>
       <div class="button quiz"><font size="21">Find out more about your style!</font></div>
       <div class="button tips"><font size="21">Tips and helpful hints!</font></div>
-      <div class="button about-us"><font size="21"> <align="right">Meet the creators!</font></div>
+      <div class="button about-us"><font size="21">Meet the creators!</font></div>
 
             
     </head>
