--- a/About/homepage.html
+++ b/About/homepage.html
@@ -42,9 +42,9 @@
       
       <script>
          function visitPage(){
-            about.us='https://amanda137.github.io/Final-project/About/workspace.html';
+            button.about-us='https://amanda137.github.io/Final-project/About/workspace.html';
          }
       </script>
-<button onclick="visitPage();"></button>
+      <button onclick="visitPage();"></button>
             
   
