--- a/About/homepage.html
+++ b/About/homepage.html
@@ -27,6 +27,14 @@
             width: 450px;
             height: 150px;
         }
+        head {
+            background-color: #8B008B;
+            background-color: rgb(64, 218, 249, 0.5);
+        }
+        body {
+            background-color: rgb(64, 218, 249, 0.5);
+            background-color: #8B008B;
+        }
       </style>
       <div class="button quiz"><font size="21">Find out more about your style!</font></div>
       <br>
