--- a/About/homepage.html
+++ b/About/homepage.html
@@ -53,6 +53,6 @@
             button.about-us='https://amanda137.github.io/Final-project/About/workspace.html';
          }
       </script>
-      <button onclick="visitPage();"></button>
+      <button onclick="visitPage();"><div class="button about-us"><font size="21">Meet the creators!</font></div></button>
             
   
