--- a/About/homepage.html
+++ b/About/homepage.html
@@ -35,6 +35,30 @@
             background-color: rgb(64, 218, 249, 0.5);
             background-color: #8B008B;
         }
+        /* space between codes. this is for vertical tab bar*/
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 200px;
+            background-color: #ffffff;
+        }
+        li a {
+            display: block;
+            color: #000;
+            padding: 8px 16px;
+            text-decoration: none;
+        }
+        /* Change the link color on hover and when clicked on leep color to remain the same */
+        li a.active {
+            background-color: #0ef288;
+            color: black;
+        }
+
+        li a:hover:not(.active) {
+            background-color: #dc72f9;
+            color: black;
+        }
       </style>
     </head>
     
@@ -56,3 +80,23 @@
           <font size="21">Meet the creators!</font>
         </a>
       </div>
+
+      /* this is for the vertical menu */
+      
+      <ul>
+        <li>
+          <a class="active" href="https://amanda137.github.io/Final-project/About/homepage.html">
+            <font size="14">Home</font>
+          </a>
+        </li>
+        <li>
+          <a class="active" href="#contact">
+            <font size="14">Contact</font>
+          </a>
+        </li>
+        <li>
+          <a class="active" href="https://amanda137.github.io/Final-project/About/workspace.html">
+            <font size="14">About</font>
+          </a>
+        </li>
+      </ul>
