--- a/About/workspace.html
+++ b/About/workspace.html
@@ -75,13 +75,14 @@
      <br>
      <br>
       
-     <h2 style="text-align: left"> Djesnie _______ </h2
+     <h2 style="text-align: left"> Djesnie Glaude </h2
      <br> 
      <img src="images.jpg" alt="Put the picture of you here" align="left" width="300" height="300">  
      <h4> Bio: </h4>               
-     <p> here write your bio </p>               
-     <h4> Experience </h4>               
-     <p> here write your experience </p>              
+     <p> I am a 16 soon to be 17 years old young adult. I love fashion and drawing in my spare time. I am hoping, no, I want to become a fashion designer and a model.
+     <pre> I speak three languages: Creol, French, and English. I am trying to learn Korean as my fourth language. I hope in the future I can say that I speak four languages.</pre></p>               
+     <h4> Experience: </h4>               
+     <p> Girls Who Code at Synchrony Financial.</p>              
      <p> add link to home page </p> 
       
      <br>
