--- a/About/homepage.html
+++ b/About/homepage.html
@@ -55,7 +55,7 @@
         }
         /* Change the link color on hover and when clicked on leep color to remain the same */
         .active {
-            background-color: #fffff;
+            background-color: #ffffff;
         }
         li a:hover:not(.active) {
             background-color: #cc08cc;
