--- a/About/homepage.html
+++ b/About/homepage.html
@@ -71,7 +71,7 @@
           </a>
         </li>
         <li>
-          <a class="active" href="#Take quiz">
+          <a class="active" href="https://fashontbd.github.io/FinalProject/Fashiontbd.html">
             <font size="14">Take Quiz</font>
           </a>
         </li>
