--- a/About/homepage.html
+++ b/About/homepage.html
@@ -35,13 +35,16 @@
             background-color: rgb(64, 218, 249, 0.5);
             background-color: #8B008B;
         }
-        /* space between codes. this is for vertical tab bar*/
+        /* space between codes. this is for horizontal tab bar*/
+        body {margin:0;}
         ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
             overflow: hidden;
             background-color: #ffffff;
+            top: 0;
+            width: 100%;
         }
         li {
             float: left;
