--- a/About/homepage.html
+++ b/About/homepage.html
@@ -63,6 +63,9 @@
         li a:hover:not(.active) {
             background-color: #cc08cc;
         }
+        li a:hover {
+            background-color: #111;
+        }
       </style>
     </head>
     
