--- a/About/workspace.html
+++ b/About/workspace.html
@@ -25,6 +25,38 @@
         p {
             color: black;
         }
+      
+      /* space between codes. this is for horizontal tab bar*/
+        body {margin:0;}
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #ffffff;
+            top: 0;
+            width: 100%;
+        }
+        li {
+            float: left;
+        }
+        li a {
+            display: block;
+            color: #000;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        /* Change the link color on hover and when clicked on leep color to remain the same */
+        .active {
+            background-color: #ffffff;
+        }
+        li a:hover:not(.active) {
+            background-color: #cc08cc;
+        }
+        li a:hover {
+            background-color: #cc08cc;
+        }  
       </style>       
     </head>
     <body>
