--- a/About/workspace.html
+++ b/About/workspace.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <title>About Us 2</title>
+      <title>About Us</title>
       <style>
         div {
             margin: 60px 45px 60px 45px;
