--- a/About/homepage.html
+++ b/About/homepage.html
@@ -42,12 +42,13 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #ffffff;
+            background-color: #c105c1;
             top: 0;
             width: 100%;
         }
         li {
             float: left;
+            border-right:1px solid #8300a8;
         }
         li a {
             display: block;
