--- a/About/workspace.html
+++ b/About/workspace.html
@@ -33,12 +33,13 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #ffffff;
+            background-color: #c105c1;
             top: 0;
             width: 100%;
         }
         li {
             float: left;
+            border-right:1px solid #8300a8;
         }
         li a {
             display: block;
@@ -56,7 +57,7 @@
         }
         li a:hover {
             background-color: #cc08cc;
-        }  
+        }
       </style>       
     </head>
     <body>
