--- a/About/homepage.html
+++ b/About/homepage.html
@@ -59,10 +59,10 @@
         }
         /* Change the link color on hover and when clicked on leep color to remain the same */
         .active {
-            background-color: #ffffff;
+            background-color: #bb02ef;
         }
         li a:hover:not(.active) {
-            background-color: #cc08cc;
+            background-color: #bb02ef;
         }
         li a:hover {
             background-color: #cc08cc;
