--- a/About/workspace.html
+++ b/About/workspace.html
@@ -61,6 +61,30 @@
       </style>       
     </head>
     <body>
+      
+      <ul>
+        <li>
+          <a class="active" href="https://amanda137.github.io/Final-project/About/homepage.html">
+            <font size="14">Home</font>
+          </a>
+        </li>
+        <li>
+          <a class="active" href="https://fashontbd.github.io/FinalProject/Fashiontbd.html">
+            <font size="14">Take Quiz</font>
+          </a>
+        </li>
+        <li>
+          <a class="active" href="#contact">
+            <font size="14">Contact</font>
+          </a>
+        </li>
+        <li>
+          <a class="active" href="https://amanda137.github.io/Final-project/About/workspace.html">
+            <font size="14">About</font>
+          </a>
+        </li>
+      </ul>
+      
       <div>
       <b>
         <center>
