--- a/About/homepage.html
+++ b/About/homepage.html
@@ -42,7 +42,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #c105c1;
+            background-color: #bb02ef;
             top: 0;
             width: 100%;
         }
@@ -62,7 +62,7 @@
             background-color: #bb02ef;
         }
         li a:hover:not(.active) {
-            background-color: #bb02ef;
+            background-color: #cc08cc;
         }
         li a:hover {
             background-color: #cc08cc;
