--- a/About/workspace.html
+++ b/About/workspace.html
@@ -33,7 +33,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: #c105c1;
+            background-color: #bb02ef;
             top: 0;
             width: 100%;
         }
@@ -50,7 +50,7 @@
         }
         /* Change the link color on hover and when clicked on leep color to remain the same */
         .active {
-            background-color: #ffffff;
+            background-color: #bb02ef;
         }
         li a:hover:not(.active) {
             background-color: #cc08cc;
