--- a/About/workspace.html
+++ b/About/workspace.html
@@ -136,7 +136,7 @@
      <br> 
      <img src="images.jpg" alt="Put the picture of you here" align="left" width="300" height="300">  
      <h4> Bio: </h4>               
-     <p> I am a 16 soon to be 17 years old young adult. I love fashion and drawing in my spare time. I am hoping, no, I want to become a fashion designer and a model.
+     <p> I am a 16 soon to be 17 years old. I love fashion and drawing in my spare time. I am hoping, no, I want to become a fashion designer and a model.
      <pre> I speak three languages: Creol, French, and English. I am trying to learn Korean as my fourth language. I hope in the future I can say that I speak four languages.</pre></p>               
      <h4> Experience: </h4>               
      <p> Girls Who Code at Synchrony Financial.</p>              
