--- a/About/workspace.html
+++ b/About/workspace.html
@@ -83,6 +83,11 @@
             <font size="14">About</font>
           </a>
         </li>
+        <li>
+          <a class="active" href="#citations">
+            <font size="14">Citations/font>
+          </a>
+        </li>
       </ul>
       
       <div>
