--- a/About/homepage.html
+++ b/About/homepage.html
@@ -92,6 +92,11 @@
             <font size="14">About</font>
           </a>
         </li>
+        <li>
+          <a class="active" href="#citations">
+            <font size="14">Citations/font>
+          </a>
+        </li>
       </ul>
 
       
