--- a/About/homepage.html
+++ b/About/homepage.html
@@ -94,7 +94,7 @@
         </li>
         <li>
           <a class="active" href="#citations">
-            <font size="14">Citations/font>
+            <font size="14">Citations</font>
           </a>
         </li>
       </ul>
