--- a/About/workspace.html
+++ b/About/workspace.html
@@ -85,7 +85,7 @@
         </li>
         <li>
           <a class="active" href="#citations">
-            <font size="14">Citations/font>
+            <font size="14">Citations</font>
           </a>
         </li>
       </ul>
@@ -105,7 +105,9 @@
      <br>
      <img src="images.jpg" alt="Put the picture of you here" align="right" width="300" height="300">
      <h4 text-align:"left"> Bio: </h4>     
-     <p text-align:"left"> here write your bio </p>          
+     <p text-align:"left"> I am a Girl Who Codes! I am 16 years old and I am going to be an upcoming Junior in Westhill High School. 
+     <pre> My interests include playing volleyball, baking, hanging out with my family and listening to music. 
+     <pre> In the future, I hope to pursue computer science, more specifically web design!</pre></pre></p>          
      <h4 text-align:"left"> Experience </h4>     
      <p text-align:"left"> here write your experience </p>    
      <p text-align:"left"> add link to home page </p>
@@ -117,9 +119,9 @@
      <br>     
      <img src="IMG_0537.JPG" align="left" width="300" height="300">     
      <h4> Bio: </h4>          
-     <p> here write your bio </p>          
+     <p> I am a rising junior and I attend Amistade High School in New Haven, CT. I am really interested in helping others and during hair.  </p>          
      <h4> Experience </h4>          
-     <p> here write your experience </p>         
+     <p> Girls Who Code at Synchrony Financial </p>         
      <p> add link to home page </p>          
       
      <br>     
