--- a/About/workspace.html
+++ b/About/workspace.html
@@ -117,7 +117,7 @@
       
      <h2 style="text-align: left"> Tianna _______ </h2>     
      <br>     
-     <img src="IMG_0537.JPG" align="left" width="300" height="300">     
+     <img src="IMG_0537.JPG" align="right" width="300" height="300">     
      <h4> Bio: </h4>          
      <p> I am a rising junior and I attend Amistade High School in New Haven, CT. I am really interested in helping others and during hair.  </p>          
      <h4> Experience </h4>          
@@ -141,7 +141,7 @@
       
      <h2 style="text-align: left"> Djesnie Glaude </h2
      <br> 
-     <img src="images.jpg" alt="Put the picture of you here" align="left" width="300" height="300">  
+     <img src="images.jpg" alt="Put the picture of you here" align="right" width="300" height="300">  
      <h4> Bio: </h4>               
      <p> I am a 16 soon to be 17 years old. I love fashion and drawing in my spare time. I am hoping, no, I want to become a fashion designer and a model.
      <pre> I speak three languages: Creol, French, and English. I am trying to learn Korean as my fourth language. I hope in the future I can say that I speak four languages.</pre></p>               
