--- a/About/workspace.html
+++ b/About/workspace.html
@@ -80,7 +80,7 @@
         </li>
         <li>
           <a class="active" href="https://amanda137.github.io/Final-project/About/workspace.html">
-            <font size="14">About</font>
+            <font size="14">About Us</font>
           </a>
         </li>
         <li>
@@ -89,6 +89,7 @@
           </a>
         </li>
       </ul>
+      
       
       <div>
       <b>
