--- a/About/homepage.html
+++ b/About/homepage.html
@@ -89,7 +89,7 @@
         </li>
         <li>
           <a class="active" href="https://amanda137.github.io/Final-project/About/workspace.html">
-            <font size="14">About</font>
+            <font size="14">About Us</font>
           </a>
         </li>
         <li>
