--- a/About/citations.html
+++ b/About/citations.html
@@ -4,7 +4,9 @@
       <title> Citations </title>
     </head>
       <body>
-        <h1> Citations for the pictures </h1>
+        <h1><text-align="center"> Citations for the pictures </h1>
+          <br>
+          <br>
           <pre>
             https://i5.walmartimages.com/asr/6ea69d57-d166-4979-8764-a81b0012e8c7_1.0e5b8aca8632c7f9edf9187041e0cc82.jpeg?odnHeight=180&odnWidth=180&odnBg=FFFFF
 
@@ -29,6 +31,6 @@
             https://s-media-cache-ak0.pinimg.com/736x/fb/06/9f/fb069fd20fe712ed1a20dab798445826--office-buildings-celebrity-street-styles.jpg
 
             https://s-media-cache-ak0.pinimg.com/236x/c5/8c/11/c58c11779f6f1c7f890ffa59d6aa5e80--selena-gomez-concert-celebrity-outfits.jpg
-         /pre>
+         </pre>
      </body>
    </html>
