--- a/About/citations.html
+++ b/About/citations.html
@@ -4,7 +4,7 @@
       <title> Citations </title>
     </head>
       <body>
-        <h1><text-align="center"> Citations for the pictures </h1>
+        <h1 text-align="center"> Citations for the pictures </h1>
           <br>
           <br>
           <pre>
