--- a/About/citations.html
+++ b/About/citations.html
@@ -4,7 +4,9 @@
       <title> Citations </title>
     </head>
       <body>
-        <h1 text-align="center"> Citations for the pictures </h1>
+        <center>
+        <h1> Citations for the pictures </h1>
+        </center>
           <br>
           <br>
           <pre>
