--- a/About/citations.html
+++ b/About/citations.html
@@ -2,8 +2,71 @@
   <html>
     <head>
       <title> Citations </title>
+      <style>
+        body {margin:0;}
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #bb02ef;
+            top: 0;
+            width: 100%;
+        }
+        li {
+            float: left;
+            border-right:1px solid #8300a8;
+        }
+        li a {
+            display: block;
+            color: #000;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        /* Change the link color on hover and when clicked on leep color to remain the same */
+        .active {
+            background-color: #bb02ef;
+        }
+        li a:hover:not(.active) {
+            background-color: #cc08cc;
+        }
+        li a:hover {
+            background-color: #cc08cc;
+        }
+      </style>
     </head>
       <body>
+        
+        <ul>
+        <li>
+          <a class="active" href="https://amanda137.github.io/Final-project/About/homepage.html">
+            <font size="14">Home</font>
+          </a>
+        </li>
+        <li>
+          <a class="active" href="https://fashontbd.github.io/FinalProject/Fashiontbd.html">
+            <font size="14">Take Quiz</font>
+          </a>
+        </li>
+        <li>
+          <a class="active" href="#contact">
+            <font size="14">Contact</font>
+          </a>
+        </li>
+        <li>
+          <a class="active" href="https://amanda137.github.io/Final-project/About/workspace.html">
+            <font size="14">About Us</font>
+          </a>
+        </li>
+        <li>
+          <a class="active" href="#citations">
+            <font size="14">Citations</font>
+          </a>
+        </li>
+      </ul>
+
+        
         <center>
         <h1> Citations for the pictures </h1>
         </center>
