--- a/About/homepage.html
+++ b/About/homepage.html
@@ -82,18 +82,14 @@
             <font size="14">Take Quiz</font>
           </a>
         </li>
-        <li>
-          <a class="active" href="#contact">
-            <font size="14">Contact</font>
-          </a>
-        </li>
+
         <li>
           <a class="active" href="https://amanda137.github.io/Final-project/About/workspace.html">
             <font size="14">About Us</font>
           </a>
         </li>
         <li>
-          <a class="active" href="#citations">
+          <a class="active" href="https://amanda137.github.io/Final-project/About/citations.html">
             <font size="14">Citations</font>
           </a>
         </li>
