--- a/About/citations.html
+++ b/About/citations.html
@@ -59,6 +59,11 @@
             <font size="14">About Us</font>
           </a>
         </li>
+        <li>
+          <a class="active" href="https://amanda137.github.io/Final-project/About/tips.html">
+            <font size="14">Citations</font>
+          </a>
+        </li>
       </ul>
 
         
