--- a/About/workspace.html
+++ b/About/workspace.html
@@ -83,6 +83,11 @@
             <font size="14">Citations</font>
           </a>
         </li>
+        <li>
+          <a class="active" href="https://amanda137.github.io/Final-project/About/tips.html">
+            <font size="14">Citations</font>
+          </a>
+        </li>
       </ul>
       
       
